--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "aos": "^3.0.0-beta.6",
+    "apexcharts": "^3.8.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.22",
     "core-js": "^2.6.5",
     "vee-validate": "^2.2.10",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.4.0",
     "vue-router": "^3.0.6",
     "vue-snotify": "^3.2.1"
   },
